# patch-22

./: .gitignore  Cargo.toml  LICENSE  README.md  apply_patch
src/: main.rs
tests/: guardrails.rs
