[package]
name = "patch-22"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
autobins = false

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[dependencies]
codex-apply-patch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace]
members = [
  "vendor/codex-rs/apply-patch",
  "vendor/codex-rs/utils/cargo-bin",
]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_matches = "1.5.0"
codex-apply-patch = { path = "vendor/codex-rs/apply-patch" }
codex-utils-cargo-bin = { path = "vendor/codex-rs/utils/cargo-bin" }
pretty_assertions = "1.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2.7.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"
